@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application' // Для запуска приложения
 }
 
 group = 'org.example'
@@ -15,6 +16,15 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
+application {
+    mainClass = 'org.example.Main' // Укажите ваш главный класс
+}
+
+run {
+    jvmArgs '--add-opens', 'java.base/java.time=ALL-UNNAMED'
+}
+
 test {
     useJUnitPlatform()
+    jvmArgs '--add-opens', 'java.base/java.time=ALL-UNNAMED'
 }
